--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.3.1",
+    "cookies-next": "^5.1.0",
     "next": "15.1.7",
     "prisma": "^6.3.1",
     "react": "^19.0.0",
