--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.3.1",
+    "@auth/prisma-adapter": "^2.8.0",
+    "@prisma/client": "^6.4.1",
+    "bcryptjs": "^3.0.2",
     "cookies-next": "^5.1.0",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
